--- a/main.html
+++ b/main.html
@@ -1,16 +1,61 @@
 <!DOCTYPE html>
-
-<html>
-
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <h1 id="verification_heading">Verify Your Account</h1>
+    <h4 id="verification_subtext">
+      We emailed you the six digit code to acciojob@gmail.com Enter the code
+      below to confirm your email address.
+    </h4>
+    <div class="code-container">
+      <input
+        id="first-input"
+        class="code"
+        type="text"
+        maxlength="1"
+        placeholder="0"
+      />
+      <input
+        id="second-input"
+        class="code"
+        type="text"
+        maxlength="1"
+        placeholder="0"
+      />
+      <input
+        id="third-input"
+        class="code"
+        type="text"
+        maxlength="1"
+        placeholder="0"
+      />
+      <input
+        id="fourth-input"
+        class="code"
+        type="text"
+        maxlength="1"
+        placeholder="0"
+      />
+      <input
+        id="fifth-input"
+        class="code"
+        type="text"
+        maxlength="1"
+        placeholder="0"
+      />
+      <input
+        id="sixth-input"
+        class="code"
+        type="text"
+        maxlength="1"
+        placeholder="0"
+      />
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
