--- a/main.html
+++ b/main.html
@@ -14,42 +14,42 @@
     </h4>
     <div class="code-container">
       <input
-        id="first-input"
+        id="code-1"
         class="code"
         type="text"
         maxlength="1"
         placeholder="0"
       />
       <input
-        id="second-input"
+        id="code-2"
         class="code"
         type="text"
         maxlength="1"
         placeholder="0"
       />
       <input
-        id="third-input"
+        id="code-3"
         class="code"
         type="text"
         maxlength="1"
         placeholder="0"
       />
       <input
-        id="fourth-input"
+        id="code43"
         class="code"
         type="text"
         maxlength="1"
         placeholder="0"
       />
       <input
-        id="fifth-input"
+        id="code-5"
         class="code"
         type="text"
         maxlength="1"
         placeholder="0"
       />
       <input
-        id="sixth-input"
+        id="code-6"
         class="code"
         type="text"
         maxlength="1"
